beamer: ugly fix for the tilde in url

--- a/beamer.tex
+++ b/beamer.tex
@@ -941,7 +941,7 @@ managed}. It implements a region-based memory management scheme.
 \vfill
 
 Consider reading
-\texttt{lrde.epita.fr/~akim/ccmp/doc/gnuprog2/obstack.html}, and
+\texttt{lrde.epita.fr/$_{\widetilde{~}}$akim/ccmp/doc/gnuprog2/obstack.html}, and
 the rest of it too.
 \end{frame}
 
