beamer: m4 and variants
    * beamer.tex (Internals): Here, done.

--- a/beamer.tex
+++ b/beamer.tex
@@ -1111,11 +1111,335 @@ $PERL -pi -e 's{(.*): warning: (.*)\[-W(.*)\]$}
 Yeah, because fuck you.
 \end{frame}
 
-\subsection{Homemade variants}
-
 \subsection{GNU M4 backend}
 
 \begin{frame}
+  \frametitle{GNU m4}
+  \textbf{GNU m4} is the GNU implementation of the m4 macro processor, which
+  was designed by Brian Kernighan and Dennis Ritchie. M4 is an extension of an
+  earlier macro processor m3, written by Ritchie for the AP-3 minicomputer.
+
+\vfill
+
+  In the year 2000, Bison's backend switched to m4 generation. M4 is now 10\%
+  of Bison's lines of code.
+\end{frame}
+
+\begin{frame}[fragile,shrink=25]
+  \frametitle{GNU m4}
+  \begin{verbatim}
+# HTML utility macro:
+define(`H2_COUNT', 0)
+
+# The H2_COUNT macro is redefined every time the H2 macro is used:
+define(`H2',
+          `define(`H2_COUNT', incr(H2_COUNT))<h2>H2_COUNT. $1</h2>')
+
+divert(1)dnl
+dnl
+dnl The dnl macro causes m4 to discard the rest of the line, thus
+dnl preventing unwanted blank lines from appearing in the output.
+dnl
+H2(First Section)
+H2(Second Section)
+H2(Conclusion)
+dnl
+divert(0)dnl
+dnl
+<HTML>
+undivert(1)dnl One of the queues is being pushed to output.
+</HTML>
+  \end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Yeah, ok, it's juste HTML}
+  \begin{verbatim}
+  <HTML>
+  <h2>1. First Section</h2>
+  <h2>2. Second Section</h2>
+  <h2>3. Conclusion</h2>
+  </HTML>
+  \end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile,shrink=15]
+  \frametitle{m4 is cool!}
+\begin{verbatim}
+# A quine
+define(`quine',``$1(`$1')'')
+quine(`define(`quine',``$1(`$1')'')
+quine')
+
+# 99 bottles of beer
+define(`BOTTLES', `bottles of beer')dnl
+define(`BOTTLE', `bottle of beer')dnl
+define(`WALL', `on the wall')dnl
+define(`TAKE', `take one down, pass it around')dnl
+define(`NINETEEN', `$1 ifelse(`$1',`1',BOTTLE,BOTTLES) WALL
+$1 ifelse(`$1',`1',BOTTLE,BOTTLES)
+ifelse(`$1',`0',,`TAKE')
+ifelse(`$1',`0',,`NINETEEN(eval($1-1))')')dnl
+NINETEEN(99)
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile,shrink=25]
+  \frametitle{It's actual use in Bison}
+  \begin{verbatim}
+## ----------- ##
+## Synclines.  ##
+## ----------- ##
+
+# b4_basename(NAME)
+# -----------------
+# Similar to POSIX basename; the differences don't matter here.
+# Beware that NAME is not evaluated.
+m4_define([b4_basename],
+[m4_bpatsubst([$1], [^.*/\([^/]+\)/*$], [\1])])
+
+# b4_syncline(LINE, FILE)
+# -----------------------
+m4_define([b4_syncline],
+[b4_flag_if([synclines],
+[b4_sync_start([$1], [$2]) b4_sync_end([__line__],
+                         [b4_basename(m4_quote(__file__))])[]dnl
+])])
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile,shrink=25]
+  \begin{verbatim}
+# b4_symbol_actions(KIND, [TYPE = yytype])
+# ----------------------------------------
+# Emit the symbol actions for KIND ("printer" or "destructor").
+# Dispatch on TYPE.
+m4_define([b4_symbol_actions],
+[m4_pushdef([b4_actions_], m4_expand([b4_symbol_foreach([b4_symbol_$1])]))dnl
+m4_ifval(m4_defn([b4_actions_]),
+[switch (m4_default([$2], [yytype]))
+    {
+      m4_defn([b4_actions_])
+      default:
+        break;
+    }dnl
+],
+[YYUSE (m4_default([$2], [yytype]));])dnl
+m4_popdef([b4_actions_])dnl
+])
+
+# b4_symbol_case_(SYMBOL-NUM)
+# ---------------------------
+# Issue a "case NUM" for SYMBOL-NUM.
+m4_define([b4_symbol_case_],
+[case b4_symbol([$1], [number]): b4_symbol_tag_comment([$1])])
+])
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile,shrink=25]
+  \frametitle{Bison using m4}
+  \begin{verbatim}
+    template <typename T>
+    T&
+    build ()
+    {]b4_parse_assert_if([
+      YYASSERT (!tname);
+      YYASSERT (sizeof (T) <= S);
+      tname = typeid (T).name ();])[
+      return *new (buffer.raw) T;
+    }
+
+
+  template <typename Base>
+  inline
+  void
+  ]b4_parser_class_name[::basic_symbol<Base>::move (basic_symbol& s)
+  {
+    super_type::move(s);
+    ]b4_variant_if([b4_symbol_variant([this->type_get ()], [value], [move],
+                                      [s.value])],
+                   [value = s.value;])[]b4_locations_if([
+    location = s.location;])[
+  }
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile,shrink=25]
+  \frametitle{This, is what generates\ldots}
+\begin{verbatim}
+# b4_symbol_constructor_define_(SYMBOL-NUMBER)
+# --------------------------------------------
+# Define symbol constructor for this SYMBOL-NUMBER.
+m4_define([b4_symbol_constructor_define_],
+[b4_symbol_if([$1], [is_token], [b4_symbol_if([$1], [has_id],
+[  b4_parser_class_name::symbol_type
+  b4_parser_class_name::make_[]b4_symbol_([$1], [id]) (dnl
+b4_join(b4_symbol_if([$1], [has_type],
+                     [const b4_symbol([$1], [type])& v]),
+        b4_locations_if([const location_type& l])))
+  {
+    return symbol_type (b4_join([token::b4_symbol([$1], [id])],
+                                b4_symbol_if([$1], [has_type], [v]),
+                                b4_locations_if([l])));
+
+  }
+])])])
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{\ldots this.}
+\begin{verbatim}
+parser::symbol_type
+parser::make_TEXT (const ::std::string& v)
+{
+  return symbol_type (token::TOK_TEXT, v);
+}
+
+
+\end{verbatim}
+
+\pause
+
+Yes, this is the constructor that come along \texttt{\%define
+api.token.constructor}.
+\end{frame}
+
+\subsection{Homemade variants}
+
+\begin{frame}[fragile]
+  \frametitle{Why variants?}
+The C parsers use an \texttt{union} for the \textbf{semantic type} of rules.
+
+\begin{verbatim}
+%union
+{
+    int         value;
+    s_struct    someStruct;
+}
+\end{verbatim}
+
+However, \texttt{union}s can only hold \textit{Plain-Old-Data}. They cannot
+hold objects (pointers to objects are fine though).
+
+\vfill
+
+So \texttt{Bison} introduced variants:
+
+\begin{verbatim}
+%define api.value.type variant
+%token <int> NUMBER;
+%token <std::string> STRING;
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile,shrink=30]
+  \begin{verbatim}
+template <size_t S>
+struct variant
+{
+private:
+  /// A buffer large enough to store any of the semantic values.
+  /// Long double is chosen as it has the strongest alignment
+  /// constraints.
+  union
+  {
+    long double align_me;
+    char raw[S];
+  } buffer;
+};
+
+union union_type
+{
+      // bool
+      char dummy1[sizeof(bool)];
+      // someClass
+      char dummy2[sizeof(someClass)];
+      // anotherClass
+      char dummy3[sizeof(anotherClass)];
+};
+
+/// Symbol semantic values.
+typedef variant<sizeof(union_type)> semantic_type;
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile,shrink=25]
+\begin{verbatim}
+    /// Assign the content of \a other to this.
+    /// Destroys \a other.
+    template <typename T>
+    inline void
+    build (variant<S>& other)
+    {
+      build<T>();
+      swap<T>(other);
+      other.destroy<T>();
+    }
+
+    /// Copy the content of \a other to this.
+    /// Destroys \a other.
+    template <typename T>
+    inline void
+    copy (const variant<S>& other)
+    {
+      build<T>(other.as<T>());
+    }
+
+    /// Destroy the stored \a T.
+    template <typename T>
+    inline void
+    destroy ()
+    {
+      as<T>().~T();
+    }
+
+    /// Prohibit blind copies.
+    //  private:
+    self_type& operator=(const self_type&)
+    {
+      abort();
+    }
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Type-punning issues}
+\begin{verbatim}
+/// Const accessor to a built \a T (for %printer).
+template <typename T>
+inline const T&
+as () const
+{
+  return reinterpret_cast<const T&>(buffer.raw);
+}
+
+
+warning: dereferencing type-punned pointer will break
+         strict-aliasing rules [-fstrict-aliasing]
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{The solution}
+
+\begin{verbatim}
+diff --git a/data/variant.hh b/data/variant.hh
+index 047e641..e2a537a 100644
+--- a/data/variant.hh
++++ b/data/variant.hh
+@@ -142,7 +142,10 @@ m4_define([b4_variant_define],
+{]b4_parse_assert_if([
+YYASSERT (tname == typeid (T).name ());
+YYASSERT (sizeof (T) <= S);])[
+- return reinterpret_cast<T&> (buffer.raw);
++ {
++ void *dummy = buffer.raw;
++ return *static_cast<T*> (dummy);
++ }
+}
+\end{verbatim}
 \end{frame}
 
 \section{Working with GNU}
